Tests/CarlTests/CompilerTests/positive/game-of-life.carl
automaton GameOfLife {
    world {
        states { Dead, Alive }
        neighborhood: Moore(1)
        dimension: 2
    }

    initial {
        Dead: 0.6
        Alive: 0.4
    }

    rules {
        Dead -> Alive when count_neighbors(Alive) == 3
        Alive -> Dead when count_neighbors(Alive) < 2 or count_neighbors(Alive) > 3
    }
}
